--- a/_posts/2015-3-01-About-Us.md
+++ b/_posts/2015-3-01-About-Us.md
@@ -1,5 +1,5 @@
 ---
 layout: post
-title: about
+title: About Us
 ---
 This is an ongoing project that will have new articles posted regularly.  Feedback is always welcome, find us on our Facebook or Twitter accounts (to be announced).  Watch this space for more!
